Fixes for scrolling and dark mode toggle

--- a/src/themes/theme-1.scss
+++ b/src/themes/theme-1.scss
@@ -82,32 +82,32 @@ $light-theme:   mat-light-theme($light-primary, $light-accent);
 // Include the default theme styles.
 @include angular-material-theme($light-theme);
 
-body {
+.app-container {
   background-image: url('../assets/images/joanna-kosinska-7ACuHoezUYk-unsplash.jpg');
   //background-image: url('../assets/images/sahand-babali-owjrvbyXYyc-unsplash.jpg');
   background-size: cover;
 }
 
-.alternative{
+.alternative {
   // Define an alternate dark theme.
   $dark-primary: mat-palette($md-dark);
   $dark-accent:  mat-palette($mat-blue, A200, A100, A400);
   $dark-warn:    mat-palette($mat-deep-orange);
   $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   @include angular-material-theme($dark-theme);
+}
 
-  body {
-    background-image: url('../assets/images/sahand-babali-owjrvbyXYyc-unsplash.jpg');
-    //background-repeat: no-repeat;
-    background-size: cover;
-  }
+.app-container.alternative {
+  background-image: url('../assets/images/sahand-babali-owjrvbyXYyc-unsplash.jpg');
+  //background-repeat: no-repeat;
+  background-size: cover;
 }
 
 // --------------------------------------------------------------------------
 //                                GLOBAL STYLES
 // --------------------------------------------------------------------------
 
-html, body {
+html, body, .app-container {
   width: 100%;
   height: 100%;
   margin: 0;
