--- a/src/themes/theme-2.scss
+++ b/src/themes/theme-2.scss
@@ -97,6 +97,12 @@ $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   @include angular-material-theme($dark-theme);
 }
 
+.app-container {
+  background-image: url('../assets/images/sahand-babali-owjrvbyXYyc-unsplash.jpg');
+  //background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .alternative {
   // Define an alternate dark theme.
   $dark-primary: mat-palette($md-dark);
@@ -104,20 +110,19 @@ $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   $dark-warn:    mat-palette($mat-deep-orange);
   $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   @include angular-material-theme($dark-theme);
-
-  body {
-    background-image: url('../assets/images/sahand-babali-owjrvbyXYyc-unsplash.jpg');
-    //background-repeat: no-repeat;
-    background-size: cover;
-  }
+  
 }
 
+.app-container.alternative {
+  background-image: url('../assets/images/joanna-kosinska-7ACuHoezUYk-unsplash.jpg') !important;
+  background-size: cover;
+}
 
 // --------------------------------------------------------------------------
 //                                GLOBAL STYLES
 // --------------------------------------------------------------------------
 
-html, body {
+html, body, .app-container {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -133,12 +138,6 @@ html, body {
 }
 
 $header-height: 100px;
-
-body {
-  background-image: url('../assets/images/sahand-babali-owjrvbyXYyc-unsplash.jpg');
-  //background-repeat: no-repeat;
-  background-size: cover;
-}
 
 .content {
   margin: 20px;
